k8s/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-cart
  labels:
    name: shopping-cart
    app: shopping-cart
