k8s/manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: shopping-cart
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
