k8s/manifests/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: shopping-cart
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
